WIP: VOL-895: Low colour contrast fixes

--- a/app/cdn/assets/_styles/core/forms.scss
+++ b/app/cdn/assets/_styles/core/forms.scss
@@ -220,8 +220,8 @@ textarea,
   );
 
   border-color: theme(
-    $internal: $grey-2,
-    $selfserve: $grey-1
+    $internal: $black,
+    $selfserve: $black
   );
 
 }
@@ -289,9 +289,13 @@ select {
 input,
 textarea,
 select,
+input.govuk-input,
 %focused {
   &:focus {
     outline: 3px solid $outline;
+    outline-offset: 0;
+    -webkit-box-shadow: inset 0 0 0 2px;
+    box-shadow: inset 0 0 0 2px;
   }
 }
 
@@ -706,7 +710,7 @@ select,
     }
   }
 
-  // do not display break tags in generated markup for 
+  // do not display break tags in generated markup for
   // submission comments
   .submission .comment {
     br {
